<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app">
    <com.zxcn.imai.smart.ui.HeaderView
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="@string/title_measure_pre"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:layout_below="@id/headerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="@dimen/main_btn_top_margin"
        android:orientation="vertical">
        <Button
            android:id="@+id/non_Registration"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:gravity="center"
            android:background="@drawable/shape_blue_corner"
            android:textColor="@color/font_black"
            android:text="@string/non_Registration"/>
        <TextView
            android:id="@+id/scanning"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="@dimen/measure_pre_btn_measure_height"
            android:drawableTop="@drawable/saoma1"
            android:gravity="center"
            android:textColor="@color/font_black"
            android:contentDescription="@string/state"
            android:text="@string/scanning"/>
        <TextView
            android:id="@+id/finger_tv"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="@dimen/measure_pre_btn_measure_height"
            android:drawableTop="@drawable/zhiwen_grey"
            android:gravity="center"
            android:textColor="@color/font_black"
            android:text="@string/btn_finger"
            android:contentDescription="@string/state" />

        <TextView
            android:id="@+id/register_tv"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/measure_pre_btn_measure_height"
            android:textSize="16sp"
            android:gravity="center"
            android:background="@drawable/shape_blue_corner"
            android:textColor="@color/font_black"
            android:text="@string/register"/>
    </LinearLayout>

    <!--<TextView-->
        <!--android:id="@+id/register_tv"-->
        <!--android:layout_width="80dp"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_margin="5dp"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:background="@drawable/shape_blue_gray"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/register"-->
        <!--android:textColor="@color/font_black"-->
        <!--android:textSize="16sp"/>-->

    <!--<TextView-->
        <!--android:id="@+id/setting_tv"-->
        <!--android:layout_width="80dp"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_margin="5dp"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:background="@drawable/shape_blue_gray"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/setting"-->
        <!--android:textColor="@color/font_black"-->
        <!--android:textSize="16sp"/>-->
</RelativeLayout>