<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.zxcn.imai.smart.ui.HeaderView
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:titleText="注册" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/headerView"
        android:orientation="vertical">

        <!--<EditText-->
        <!--android:id="@+id/finger_bindName"-->
        <!--android:layout_width="150dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:textColor="@color/font_black"-->
        <!--android:hint="@string/userName"-->
        <!--android:gravity="center"-->
        <!--android:textSize="16sp" />-->

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/ad_login"
                android:text="@string/tv_reg_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/mname"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/bg_title_bar"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/ad_login"
                android:text="@string/tv_reg_id"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/mid"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:digits="0123456789xyzXYZ"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/bg_title_bar"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/ad_login"
                android:text="@string/tv_reg_phone"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/mphone"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:digits="0123456789xyzXYZ"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/bg_title_bar"
                android:textSize="18sp" />

            <Button
                android:id="@+id/mgetCode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tv_reg_yanzheng" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/l4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/ad_login"
                android:text="@string/tv_reg_yanzhengm"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/myanzheng"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:digits="0123456789xyzXYZ"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/bg_title_bar"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/ad_login"
                android:text="@string/tv_reg_zhiwen"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/finger_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/finger" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/firstFingerIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/selector_finger"
                android:gravity="center"
                android:scaleType="centerInside"
                android:text="@string/FingerprintOne"
                android:textColor="@color/font_black" />

            <TextView
                android:id="@+id/secondFingerIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/selector_finger"
                android:gravity="center"
                android:scaleType="centerInside"
                android:text="@string/FingerprintTwo"
                android:textColor="@color/font_black" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tipTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_left_margin"
        android:layout_marginRight="@dimen/activity_left_margin"
        android:layout_marginTop="500dp"
        android:gravity="center"
        android:text="@string/tip_finger_input"
        android:textColor="@color/font_body"
        android:textSize="@dimen/font_content" />


    <Button
        android:id="@+id/registrationComplete"
        style="@style/BlueBtn"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:text="@string/btn_bindStart" />

</RelativeLayout>