<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.zxcn.imai.smart.ui.HeaderView
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:titleText="注册" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/headerView"
        android:orientation="vertical">

        <!--<EditText-->
            <!--android:id="@+id/finger_bindName"-->
            <!--android:layout_width="150dp"-->
            <!--android:layout_height="40dp"-->
            <!--android:textColor="@color/font_black"-->
            <!--android:hint="@string/userName"-->
            <!--android:gravity="center"-->
            <!--android:textSize="16sp" />-->

        <LinearLayout
            android:id="@+id/l1"
            android:layout_below="@+id/headerView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/ad_login"
                android:text="@string/tv_reg_name"
                android:textSize="20dp"
                />

            <EditText
                android:id="@+id/mname"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textColor="@color/bg_title_bar"
                android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/l1"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/ad_login"
                android:text="@string/tv_reg_id"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/mid"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:digits="0123456789xyzXYZ"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textColor="@color/bg_title_bar"
                android:textSize="18dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/l2"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/ad_login"
                android:text="@string/tv_reg_phone"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/mphone"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:digits="0123456789xyzXYZ"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="11"
                android:singleLine="true"
                android:textColor="@color/bg_title_bar"
                android:textSize="18dp"/>

            <Button
                android:id="@+id/mgetCode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tv_reg_yanzheng"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/l4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/l3"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/ad_login"
                android:text="@string/tv_reg_yanzhengm"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/myanzheng"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:digits="0123456789xyzXYZ"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/bg_title_bar"
                android:textSize="18dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/l4"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/ad_login"
                android:text="@string/tv_reg_zhiwen"
                android:textSize="20dp"/>


            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/spinner"
                />

        </LinearLayout>

        <LinearLayout
        android:id="@+id/l6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l5"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/firstFingerIV"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/finger_bind_iv_top_margin"
            android:scaleType="centerInside"
            android:src="@drawable/selector_finger" />

        <ImageView
            android:id="@+id/secondFingerIV"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/finger_bind_iv_top_margin"
            android:scaleType="centerInside"
            android:src="@drawable/selector_finger" />
    </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tipTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_left_margin"
        android:layout_marginRight="@dimen/activity_left_margin"
        android:layout_marginTop="500dp"
        android:gravity="center"
        android:text="@string/tip_finger_input"
        android:textColor="@color/font_body"
        android:textSize="@dimen/font_content" />

    <Button
        android:id="@+id/finger_bt"
        style="@style/BlueBtn"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:layout_height="50dp"
        android:text="注册完成"/>

</RelativeLayout>